--- a/resources.html
+++ b/resources.html
@@ -122,6 +122,12 @@
             class="flex font-marhey text-sm md:text-xl font-bold text-blue-700 hover:text-blue-800 px-4 py-2 bg-yellow-100 rounded m-2 hover:bg-yellow-200"
             >Same Word</a>
           </li>
+          <li>
+            <a href="https://ethyl2.github.io/fav-games/ministers-cat.html" target="_blank"
+              class="flex font-marhey text-sm md:text-xl font-bold text-blue-700 hover:text-blue-800 px-4 py-2 bg-yellow-100 rounded m-2 hover:bg-yellow-200">
+              The Minister's Cat
+            </a>
+          </li>
         </ul>
       </section>
       <img src="./static/images/game-board.png" alt="game board" class="pb-12 w-1/2 md:w-1/3 lg:w-1/4 xl:w-1/5" />
