--- a/index.html
+++ b/index.html
@@ -176,6 +176,22 @@
                     </div>                  
                   </li>
                   <li class="glide__slide">
+                    <div class="bg-cover shadow-lg rounded-md bg-center bg-no-repeat h-48 md:h-80" style="width: 500px; background-image: url('./static/images/carousel/making-jenga-time-capsule.JPG')">
+                    </div>                  
+                  </li>
+                  <li class="glide__slide">
+                    <div class="bg-cover shadow-lg rounded-md bg-center bg-no-repeat h-48 md:h-80" style="width: 500px; background-image: url('./static/images/carousel/dixit.jpg')">
+                    </div>                  
+                  </li>
+                  <li class="glide__slide">
+                    <div class="bg-cover shadow-lg rounded-md bg-center bg-no-repeat h-48 md:h-80" style="width: 500px; background-image: url('./static/images/carousel/homemade-bread-and-flowers.jpg')">
+                    </div>                  
+                  </li>
+                  <li class="glide__slide">
+                    <div class="bg-cover shadow-lg rounded-md bg-center bg-no-repeat h-48 md:h-80" style="width: 500px; background-image: url('./static/images/carousel/may-goodies.jpeg')">
+                    </div>                  
+                  </li>
+                  <li class="glide__slide">
                     <div class="bg-cover shadow-lg rounded-md bg-center bg-no-repeat h-48 md:h-80" style="width: 500px; background-image: url('./static/images/carousel/IMG_0860.JPG')">
                     </div>                  
                   </li>
@@ -229,17 +245,21 @@
                 </button>
               </div>
               <div class="glide__bullets flex items-center justify-center" data-glide-el="controls[nav]">
-                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-2" data-glide-dir="=0"></button>
-                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-2" data-glide-dir="=1"></button>
-                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-2" data-glide-dir="=2"></button>
-                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-2" data-glide-dir="=3"></button>
-                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-2" data-glide-dir="=4"></button>
-                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-2" data-glide-dir="=5"></button>
-                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-2" data-glide-dir="=6"></button>
-                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-2" data-glide-dir="=7"></button>
-                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-2" data-glide-dir="=8"></button>
-                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-2" data-glide-dir="=9"></button>
-                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-2" data-glide-dir="=10"></button>
+                <button class="glide__bullet rounded-full w-2 h-2 md:w-5 md:h-5 bg-green-400 md:mx-2" data-glide-dir="=0"></button>
+                <button class="glide__bullet rounded-full w-2 h-2 md:w-5 md:h-5 bg-green-400 md:mx-2" data-glide-dir="=1"></button>
+                <button class="glide__bullet rounded-full w-2 h-2 md:w-5 md:h-5 bg-green-400 md:mx-2" data-glide-dir="=2"></button>
+                <button class="glide__bullet rounded-full w-2 h-2 md:w-5 md:h-5 bg-green-400 md:mx-2" data-glide-dir="=3"></button>
+                <button class="glide__bullet rounded-full w-2 h-2 md:w-5 md:h-5 bg-green-400 md:mx-2" data-glide-dir="=4"></button>
+                <button class="glide__bullet rounded-full w-2 h-2 md:w-5 md:h-5 bg-green-400 md:mx-2" data-glide-dir="=5"></button>
+                <button class="glide__bullet rounded-full w-2 h-2 md:w-5 md:h-5 bg-green-400 md:mx-2" data-glide-dir="=6"></button>
+                <button class="glide__bullet rounded-full w-2 h-2 md:w-5 md:h-5 bg-green-400 md:mx-2" data-glide-dir="=7"></button>
+                <button class="glide__bullet rounded-full w-2 h-2 md:w-5 md:h-5 bg-green-400 md:mx-2" data-glide-dir="=8"></button>
+                <button class="glide__bullet rounded-full w-2 h-2 md:w-5 md:h-5 bg-green-400 md:mx-2" data-glide-dir="=9"></button>
+                <button class="glide__bullet rounded-full w-2 h-2 md:w-5 md:h-5 bg-green-400 md:mx-2" data-glide-dir="=10"></button>
+                <button class="glide__bullet rounded-full w-2 h-2 md:w-5 md:h-5 bg-green-400 md:mx-2" data-glide-dir="=11"></button>
+                <button class="glide__bullet rounded-full w-2 h-2 md:w-5 md:h-5 bg-green-400 md:mx-2" data-glide-dir="=12"></button>
+                <button class="glide__bullet rounded-full w-2 h-2 md:w-5 md:h-5 bg-green-400 md:mx-2" data-glide-dir="=13"></button>
+                <button class="glide__bullet rounded-full w-2 h-2 md:w-5 md:h-5 bg-green-400 md:mx-2" data-glide-dir="=14"></button>
               </div>
             </div> <!-- end glide -->
           </div> <!-- end glide wrapper container -->
@@ -252,6 +272,19 @@
                   <li class="glide__slide">
                     <img alt="Singles FHE/Game Night" class="shadow rounded-md" src="./static/images/carousel/IMG_8638.JPG" />               
                   </li>
+                  <li class="glide__slide">
+                    <img alt="Singles FHE/Game Night" class="shadow rounded-md" src="./static/images/carousel/making-jenga-time-capsule.JPG" />               
+                  </li>
+                  <li class="glide__slide">
+                    <img alt="Singles FHE/Game Night" class="shadow rounded-md" src="./static/images/carousel/dixit.jpg" />               
+                  </li>
+                  <li class="glide__slide">
+                    <img alt="Singles FHE/Game Night" class="shadow rounded-md" src="./static/images/carousel/homemade-bread-and-flowers.jpg" />               
+                  </li>
+                  <li class="glide__slide">
+                    <img alt="Singles FHE/Game Night" class="shadow rounded-md" src="./static/images/carousel/may-goodies.jpeg" />               
+                  </li>
+                  
                   <li class="glide__slide">
                     <img alt="Singles FHE/Game Night" class="shadow rounded-md" src="./static/images/carousel/IMG_0860.JPG" />                  
                   </li>
@@ -296,17 +329,21 @@
                 </button>
               </div>
               <div class="glide__bullets flex items-center justify-center" data-glide-el="controls[nav]">
-                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-2" data-glide-dir="=0"></button>
-                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-2" data-glide-dir="=1"></button>
-                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-2" data-glide-dir="=2"></button>
-                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-2" data-glide-dir="=3"></button>
-                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-2" data-glide-dir="=4"></button>
-                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-2" data-glide-dir="=5"></button>
-                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-2" data-glide-dir="=6"></button>
-                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-2" data-glide-dir="=7"></button>
-                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-2" data-glide-dir="=8"></button>
-                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-2" data-glide-dir="=9"></button>
-                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-2" data-glide-dir="=10"></button>
+                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-1" data-glide-dir="=0"></button>
+                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-1" data-glide-dir="=1"></button>
+                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-1" data-glide-dir="=2"></button>
+                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-1" data-glide-dir="=3"></button>
+                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-1" data-glide-dir="=4"></button>
+                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-1" data-glide-dir="=5"></button>
+                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-1" data-glide-dir="=6"></button>
+                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-1" data-glide-dir="=7"></button>
+                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-1" data-glide-dir="=8"></button>
+                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-1" data-glide-dir="=9"></button>
+                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-1" data-glide-dir="=10"></button>
+                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-1" data-glide-dir="=11"></button>
+                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-1" data-glide-dir="=12"></button>
+                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-1" data-glide-dir="=13"></button>
+                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-1" data-glide-dir="=14"></button>
               </div>
             </div> <!-- end glide -->
           </div> <!-- end glide wrapper container -->
