--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
 
       <section id="upcoming" class="w-full mx-auto flex flex-col items-center justify-center bg-gradient-to-b from-black to-gray-700 text-red-400 py-8 px-4">
         <h3 class="font-bold text-3xl text-center pb-4 md:pt-8 ">The Next One!</h3>
-        <p class="pb-4 text-yellow-400">Monday, June 5, 2023</p>
-        <img src="./static/images/FHE-Game-Night-Jun-2023.png" alt="Singles 31+ Game Night/FHE June 2023" class="w-full max-w-4xl rounded shadow-lg" />
+        <p class="pb-4 text-yellow-400">Monday, July 10, 2023</p>
+        <img src="./static/images/July2023FHEGameNight.png" alt="Singles 31+ Game Night/FHE July 2023" class="w-full max-w-4xl rounded shadow-lg" />
       </section>
 
       <section id="invitation" class="py-8 md:py-16 px-4 flex flex-col items-center justify-center space-y-2 bg-yellow-100 w-full">
@@ -374,23 +374,26 @@
 
           <div class="flex flex-col md:flex-row w-full space-y-6 md:space-y-0 md:space-x-6">
             <div class="w-full mx-auto max-w-xl shadow rounded flex items-center justify-center">
-            <img src="./static/images/may2023-game-night-fhe.png" alt="Singles 31+ Game Night/FHE May 2023" class="w-full max-w-4xl rounded shadow-lg" />
-          </div>
-            <div class="w-full mx-auto max-w-xl shadow rounded flex items-center justify-center">
+              <img src="./static/images/FHE-Game-Night-Jun-2023.png" alt="Singles 31+ Game Night/FHE June 2023" class="w-full max-w-3xl rounded shadow-lg" />
+            </div>
+            <div class="w-full mx-auto max-w-xl rounded flex items-center justify-center">
               <img src="./static/images/fhe-game-night-apr-2023.png" alt="Singles 31+ Game Night/FHE Apr 2023" class="w-full max-w-4xl rounded shadow-lg" />
             </div>
-            <div class="w-full mx-auto max-w-xl shadow rounded flex items-center justify-center">
+            <div class="w-full mx-auto max-w-xl rounded flex items-center justify-center">
               <img src="./static/images/march2023fhe.png" alt="Singles 31+ Game Night/FHE Mar 2023" class="w-full max-w-4xl rounded shadow-lg" />
             </div>
           </div>
 
-
-          <div class="container flex flex-col md:flex-row w-full space-y-6 md:space-y-0 md:space-x-6 md:items-center md:justify-center">
-              <img src="./static/images/fhe-game-night-feb-2023.png" alt="Singles 31+ Game Night/FHE Feb 2023"
-                class="w-full max-w-lg rounded shadow-lg" />
-            
-              <img src="./static/images/fhe-game-night-jan-2023.png" alt="January 2023 Game Night"
-                class="w-full max-w-lg rounded shadow-lg" />
+          <div class="flex flex-col md:flex-row w-full space-y-6 md:space-y-0 md:space-x-6">
+            <div class="w-full mx-auto max-w-xl shadow rounded flex items-center justify-center">
+            <img src="./static/images/march2023fhe.png" alt="./static/images/march2023fhe.png" class="w-full max-w-4xl rounded shadow-lg" />
+          </div>
+            <div class="w-full mx-auto max-w-xl shadow rounded flex items-center justify-center">
+              <img src="./static/images/fhe-game-night-feb-2023.png" alt="Singles 31+ Game Night/FHE Feb 2023" class="w-full max-w-4xl rounded shadow-lg" />
+            </div>
+            <div class="w-full mx-auto max-w-xl shadow rounded flex items-center justify-center">
+              <img src="./static/images/fhe-game-night-jan-2023.png" alt="January 2023 Game Night" class="w-full max-w-4xl rounded shadow-lg" />
+            </div>
           </div>
 
           <div class="flex flex-col md:flex-row w-full space-y-6 md:space-y-0 md:space-x-6">
