--- a/index.html
+++ b/index.html
@@ -97,7 +97,6 @@
       <section id="upcoming" class="w-full mx-auto flex flex-col items-center justify-center bg-gradient-to-b from-black to-gray-700 text-red-400 py-8 px-4">
         <h3 class="font-bold text-3xl text-center pb-4 md:pt-8 ">The Next One!</h3>
         <p class="pb-4 text-yellow-400 text-lg md:text-2xl">Monday 17 June, 2024</p>
-        <p class="pb-4 text-yellow-400 text-lg md:text-2xl">Note: No FHE/Game Night on the first Monday in June, just on the third Monday!</p>
         <img src="./static/images/june-2024-fhe-game-night.png" alt="June 17, 2024 Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/>
 
         <iframe 
@@ -106,10 +105,10 @@
         ></iframe>
 
         <!-- NEXT IN QUEUE -->
-        <!-- <img src="./static/images/worth-the-wait.png" alt="Some things are worth the wait." class="mt-8 md:mt-12 mb-4 rounded-lg w-64"/>
+        <img src="./static/images/worth-the-wait.png" alt="Some things are worth the wait." class="mt-8 md:mt-12 mb-4 rounded-lg w-64"/>
         <h4 class="font-bold text-3xl text-center py-4">And in the queue!</h4>
-        <p class="pb-4 text-yellow-400 text-lg md:text-2xl">Monday 15 April, 2024</p>
-        <img src="./static/images/apr-15-2024-game-night-fhe.png" alt="April 15, 2024 Game Night/FHE." class="border-4 border-yellow-100 px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/> -->
+        <p class="pb-4 text-yellow-400 text-lg md:text-2xl">Monday 1 July, 2024</p>
+        <img src="./static/images/july-1-2024-game-night-fhe.png" alt="July 1, 2024 Game Night/FHE." class="border-4 border-yellow-100 px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/>
       </section>
 
       <section id="email" class="py-8 md:py-16 px-4 flex flex-col items-center justify-center bg-gradient-to-b from-yellow-300 to-yellow-200 w-full">
@@ -209,6 +208,18 @@
         <section id="past-events" class="flex flex-col items-center justify-center container mx-auto space-y-6 md:space-y-16">
           
           <h3 class="font-bold text-3xl text-center pt-8 text-orange-600">Photo Gallery & Past Events</h3>
+
+          <div class="w-full flex flex-col items-center justify-center space-y-3">
+            <h4 class="text-center font-bold">May 2024 - Seis de Mayo Piñata</h4>
+            <img src="./static/images/pinata.png" alt="pinata fun" class="w-full md:w-3/4 mx-auto rounded-lg shadow-lg"/>
+          </div>
+
+          <div class="flex flex-col items-center justify-center space-y-3">
+            <h4 class="text-center font-bold">April 2024 Unbirthday Party</h4>
+            <div class="w-full flex items-center justify-center rounded-md overflow-hidden shadow">
+              <img src="./static/images/april-2024-unbirthday-party.jpg" alt="April 2024 Unbirthday Party" class="rounded-md shadow"/>
+            </div>
+          </div>
           
           <div class="">
             <h4 class="text-center font-bold text-lg pb-2 md:text-xl">August 2023 AC Appreciation Days</h4>
@@ -227,7 +238,6 @@
             </div>
           </div>
           </div>
-
 
           <div>
             <h4 class="text-center font-bold">June 2023</h4>
