--- a/past-events.html
+++ b/past-events.html
@@ -69,7 +69,7 @@
     <main class="w-full mx-auto min-h-screen pt-48 md:pt-72 flex flex-col items-center justify-start">
         <img src="./static/images/game-board.png" alt="game board" class="pb-4 w-48" />
         <h2 class="font-marhey font-semibold text-lg md:text-3xl pb-8">Flyers from Past Events</h2>
-        
+        <img src="./static/images/aug-5-2024-game-night-fhe.png" alt="Aug 5, 2024 Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/>
         <div class="flex flex-col md:flex-row md:items-stretch justify-center container mx-auto space-y-6 md:space-y-0 md:space-x-6 w-full pb-12 px-4 md:px-0">
           <img src="./static/images/july-15-2024-game-night-fhe.png" alt="July 15, 2024 Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/>
           <img src="./static/images/july-1-2024-game-night-fhe.png" alt="July 1, 2024 Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/>
