--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@
         ></iframe>
 
         <!-- NEXT IN QUEUE -->
-         <div class="px-4">
+         <div class="px-4 flex flex-col items-center justify-center space-y-4 md:space-y-8 w-full py-8 md:py-16">
         <img src="./static/images/worth-the-wait.png" alt="Some things are worth the wait." class="mt-8 md:mt-12 mb-4 rounded-lg w-64"/>
         <h4 class="font-bold text-3xl text-center py-4">And in the queue!</h4>
         <p class="pb-4 text-yellow-400 text-lg md:text-2xl text-center">Monday May 19, 2025</p>
-        <!-- <img src="./static/images/mar-03-2025-fhe-game-night.png" alt="Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/> -->
+        <img src="./static/images/may-19-2025-fhe-game-night.png" alt="Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/>
         <p class="text-xl md:text-2xl">And for the rest of 2025 (Subject to change)</p>
         <ol class="flex flex-col items-start justify-start space-y-2 text-lg md:text-xl text-yellow-300">
           <li>Jun 2</li>
