--- a/past-events.html
+++ b/past-events.html
@@ -70,7 +70,9 @@
         <img src="./static/images/game-board.png" alt="game board" class="pb-4 w-48" />
         <h2 class="font-marhey font-semibold text-lg md:text-3xl pb-8">Flyers from Past Events</h2>
 
-        <div class="flex flex-col md:flex-row md:items-stretch justify-center container mx-auto space-y-6 md:space-y-0 md:space-x-6 w-full pb-12 px-4 md:px-0">
+        <img src="./static/images/june-16-2025-fhe-game-night.png" alt="Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 rounded-lg md:px-0"/>
+
+        <div class="flex flex-col md:flex-row md:items-stretch justify-center container mx-auto space-y-6 md:space-y-0 md:space-x-6 w-full py-12 px-4 md:px-0">
           <img src="./static/images/june-02-2025-fhe-game-night.png" alt="Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 rounded-lg md:px-0"/>
           <img src="./static/images/may-19-2025-fhe-game-night.png" alt="Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3  rounded-lg md:px-0"/>
         </div>
