--- a/index.html
+++ b/index.html
@@ -114,13 +114,15 @@
         <img src="./static/images/worth-the-wait.png" alt="Some things are worth the wait." class="mt-8 md:mt-12 mb-4 rounded-lg w-64"/>
         <h4 class="font-bold text-3xl text-center py-4">And in the queue!</h4>
         <p class="pb-4 text-yellow-400 text-lg md:text-2xl text-center">Monday July 21, 2025</p>
-        <!-- <img src="./static/images/july-07-2025-fhe-game-night.png" alt="Game Night/FHE." class="border-4 border-white px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/> -->
+        <img src="./static/images/july-21-2025-fhe-game-night.png" alt="Game Night/FHE." class="border-4 border-white px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/>
+
+        <div class="border-t border-white h-4 w-full md:w-1/2 lg:w-1/3"></div>
+        <p class="pb-4 text-yellow-400 text-lg md:text-2xl text-center">Monday Aug 4, 2025</p>
+        <img src="./static/images/aug-04-2025-fhe-game-night.png" alt="Game Night/FHE." class="border-4 border-white px-4 w-full md:w-1/2 lg:w-1/3 rounded-lg md:px-0"/>
         <p class="text-xl md:text-2xl">And for the rest of 2025 (Subject to change)</p>
         <ol class="flex flex-col items-start justify-start space-y-2 text-lg md:text-xl text-yellow-300">
-          
-          <li>Aug 4</li>
           <li>Aug 18</li>
-          <li>Sept 1 - Probably no FHE/Game Night because of Labor Day</li>
+          <li><span class="line-through">Sept 1</span> - No FHE/Game Night because of Labor Day</li>
           <li>Sept 15</li>
           <li>Oct 6</li>
           <li>Oct 20</li>
@@ -133,22 +135,22 @@
       </section>
 
       <section id="email" class="py-8 md:py-16 px-4 flex flex-col items-center justify-center space-y-8 bg-gradient-to-b from-yellow-300 to-yellow-200 w-full">
-        <a class="bg-white p-3 sm:p-4 rounded-lg shadow flex flex-col items-center justify-center space-y-2 w-full max-w-2xl md:space-y-3 group hover:bg-gray-100 md:p-6">
+        <div class="bg-white p-3 sm:p-4 rounded-lg shadow flex flex-col items-center justify-center space-y-2 w-full max-w-2xl md:space-y-3 group hover:bg-gray-100 md:p-6">
           <h3 class="font-bold text-xl md:text-3xl text-center text-black">Please sign up to help at a FHE/Game Night</h3>
             <p class="text-center md:text-lg">We're looking for people to help set up, offer the prayer, share a spiritual thought, lead a group game, or help clean up afterwards. Whatever floats your boat!</p>
-              <p class="text-5xl">🫶</p>
-              <div class="bg-blue-500 group-hover:bg-blue-400 rounded-lg px-4 py-2 text-white text-lg font-bold shadow"
-              >Sign Up Here</div>
-        </a>
-          <a class="bg-white p-3 sm:p-4 rounded-lg shadow flex flex-col items-center justify-center space-y-2 md:space-y-3 group w-full max-w-2xl hover:bg-gray-100 md:p-6"
+              <p class="text-5xl pointer-events-none">🫶</p>
+              <a href="https://docs.google.com/spreadsheets/d/1M2an_E1dB7JL1y2ESfQ9cHBg9GS_Qsp9pA3aB_YMETY/edit?usp=sharing" target="_blank" class="bg-blue-500 group-hover:bg-blue-400 rounded-lg px-4 py-2 text-white text-lg font-bold shadow"
+              >Sign Up Here</a>
+        </div>
+          <!-- <a class="bg-white p-3 sm:p-4 rounded-lg shadow flex flex-col items-center justify-center space-y-2 md:space-y-3 group w-full max-w-2xl hover:bg-gray-100 md:p-6"
             href="https://docs.google.com/forms/d/e/1FAIpQLSeUm-S2Sc4XmTZqxtBDxbxg0mOIVV6FeOnPeBS4thx9L_piwA/viewform?usp=sf_link"
             target="_blank" rel="noopener nofollow noreferrer">
               <h3 class="font-bold text-xl md:text-3xl text-center text-black">Sign up for the Email List!</h3>
               <p class="text-center md:text-lg">One of these days I'm going to be better at sending email reminders!</p>
               <p class="text-5xl">📧</p>
-              <div class="bg-blue-500 group-hover:bg-blue-400 rounded-lg px-4 py-2 text-white text-lg font-bold shadow"
-              >Sign Up Here</div>
-          </a>
+              <a href="https://docs.google.com/spreadsheets/d/1M2an_E1dB7JL1y2ESfQ9cHBg9GS_Qsp9pA3aB_YMETY/edit?usp=sharing" target="_blank" class="bg-blue-500 group-hover:bg-blue-400 rounded-lg px-4 py-2 text-white text-lg font-bold shadow"
+              >Sign Up Here</a>
+          </a> -->
       </section>
 
       <section id="invitation" class="py-8 md:py-16 px-4 flex flex-col items-center justify-center space-y-2 bg-yellow-100 w-full">
